--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -673,7 +673,6 @@ jobs:
       - run: cd .. && .circleci/install_lpass.sh v1.3.5
       - run: echo $LASTPASS_PASSWORD | LPASS_DISABLE_PINENTRY=1 lpass login ${LASTPASS_EMAIL}
       - run: cd .. && lpass show --notes 'citizenlab front-secret.env' > env_files/front-secret.env
-      - run: cd .. && set -a && source env_files/front-secret.env  && set +a
       - restore_cache:
           keys:
             - v2-npm-cache-{{ checksum "package-lock.json" }}
@@ -682,8 +681,15 @@ jobs:
           paths:
             - /root/.npm
           key: v2-npm-cache-{{ checksum "package-lock.json" }}
-      - run:
-          command: npm run chromatic
+      # - run:
+          # command: npm run chromatic
+      - run: |
+          cd ..
+          set -a
+          source env_files/front-secret.env
+          set +a
+          cd ./front
+          npm run chromatic
 
   # E2E TESTS
   e2e-tests:
