[NO-TICKET] Display style guide URLs in rubocop offense messages.

--- a/back/.rubocop.yml
+++ b/back/.rubocop.yml
@@ -8,6 +8,7 @@ require:
   - ./lib/rubocop/cop/forbidden_app_configuration_method.rb
 
 AllCops:
+  DisplayStyleGuide: true
   NewCops: enable
   Exclude:
     - "db/schema.rb"
