Increase CircleCI resource size for front-deploy-staging
See https://citizenlabco.slack.com/archives/C65GX921W/p1707212092106289

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -592,7 +592,7 @@ jobs:
   front-deploy-staging:
     docker:
       - image: citizenlabdotco/cl2-devops-front-buildenv
-    resource_class: medium
+    resource_class: medium+
     working_directory: ~/citizenlab/front
     steps:
       - shallow-clone
