Increase CircleCI resource size for front-deploy-production
Continues 4d5cf0c92d4f7e925b8250cb8eedf3c1a275e67b

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -623,7 +623,7 @@ jobs:
   front-deploy-production:
     docker:
       - image: citizenlabdotco/cl2-devops-front-buildenv
-    resource_class: medium
+    resource_class: medium+
     working_directory: ~/citizenlab/front
     steps:
       - shallow-clone
