[TAN-975] Fix for e2e template & project copy service

--- a/back/config/tenant_templates/e2etests_template.yml
+++ b/back/config/tenant_templates/e2etests_template.yml
@@ -8292,7 +8292,7 @@ models:
   #   - card_id: "i999"
   custom_maps/map_config:
   - &map_config1
-    project_ref: *76
+    mappable_ref: *76
     center_geojson:
       type: Point
       coordinates:
